manifests/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
 name: bootstrap
spec:
 finalizers:
 - kubernetes
---
apiVersion: v1
kind: Namespace
metadata:
 name: labs
spec:
 finalizers:
 - kubernetes
